# nbody-cuda

./: CMakeLists.txt
src/: debug.h  main.cpp  simulation.cu  simulation.h
src/phys/: float3.h  float4.h  particles.cu  particles.h
src/util/: config.cpp  config.h  glhandler.cu  glhandler.h  inc_filesystem.h  vtkwriter.cpp  vtkwriter.h
